# pretestTaskMLX

./: CMakeLists.txt  README.md  modified_linear_regression.cpp  modified_logistic_regression.cpp  transcribeScript.py
