function(build_example SRCFILE)
  get_filename_component(src_name ${SRCFILE} NAME_WE)
  set(target "${src_name}")
  add_executable(${target} ${SRCFILE})
  target_link_libraries(${target} PRIVATE mlx)
endfunction(build_example)
include_directories(${CMAKE_CURRENT_SOURCE_DIR} ../../mlx)
build_example(tutorial.cpp)
build_example(linear_regression.cpp)
build_example(logistic_regression.cpp)
build_example(modified_linear_regression.cpp)
build_example(modified_logistic_regression.cpp)
